Allow passing compiler arguments